--- a/public/index.html
+++ b/public/index.html
@@ -10,19 +10,21 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1>Hello There!</h1>
-                <p>To get started, edit <code>src/index.js</code>.</p>
+                <h1>Movies, Movies, Movies!</h1>
             </div>
         <div class="row">
             <form action="">
-                <div class="col-xs-4">
+                <div class="col-xs-12" > <div class="row">
+                    <div class="col-xs-4">
                     <label for="movieTitleInput">Title</label>
                     <input type="text" name="movieTitleInput" id="movieTitleInput">
                 </div>
-                <div class="col-xs-4">
-                    <label for="movieRatingInput">Rating</label>
-                    <input type="number" name="movieRatingInput" id="movieRatingInput">
-                </div>
+                    <div class="col-xs-4">
+                        <label for="movieRatingInput">Rating</label>
+                        <input type="number" name="movieRatingInput" id="movieRatingInput">
+                    </div>
+                </div></div>
+                <
                 <div class="col-xs-4"><button type="button" id="submitBtn">Submit New Movie</button></div>
             </form>
         </div>
