--- a/public/index.html
+++ b/public/index.html
@@ -12,25 +12,25 @@
             <div class="col-xs-12">
                 <h1>Movies, Movies, Movies!</h1>
             </div>
-        <div class="row">
-            <form action="">
-                <div class="col-xs-12" > <div class="row">
-                    <div class="col-xs-4">
-                    <label for="movieTitleInput">Title</label>
-                    <input type="text" name="movieTitleInput" id="movieTitleInput">
-                </div>
-                    <div class="col-xs-4">
-                        <label for="movieRatingInput">Rating</label>
-                        <input type="number" name="movieRatingInput" id="movieRatingInput">
+            <div class="row">
+                    <div class="col-xs-12" >
+                        <div class="row">
+                        <div class="col-xs-4">
+                        <label for="movieTitleInput">Title</label>
+                        <input type="text" name="movieTitleInput" id="movieTitleInput">
                     </div>
-                </div></div>
-                <
-                <div class="col-xs-4"><button type="button" id="submitBtn">Submit New Movie</button></div>
-            </form>
+                        <div class="col-xs-4">
+                            <label for="movieRatingInput">Rating</label>
+                            <input type="number" name="movieRatingInput" id="movieRatingInput">
+                        </div>
+                    <div class="col-xs-4"><button type="button" id="submitBtn">Submit New Movie</button></div>
+                    </div>
+                    </div>
+            </div>
         </div>
-        </div>
+        <!--Below is where movies will be displayed-->
         <div class="row" id="display-movies">
-                <h1 class="col-xs-12">Loading Movies...</h1>
+            <h1 class="col-xs-12">Loading Movies...</h1>
         </div>
     </div>
 
