--- a/public/index.html
+++ b/public/index.html
@@ -13,24 +13,40 @@
                 <h1>Movies, Movies, Movies!</h1>
             </div>
             <div class="row">
-                    <div class="col-xs-12" >
+                    <div class="col-xs-12 newMovieSection" >
                         <div class="row">
                         <div class="col-xs-4">
-                        <label for="movieTitleInput">Title</label>
+                        <label for="movieTitleInput">Title:</label>
                         <input type="text" name="movieTitleInput" id="movieTitleInput">
                     </div>
                         <div class="col-xs-4">
-                            <label for="movieRatingInput">Rating</label>
-                            <input type="number" name="movieRatingInput" id="movieRatingInput">
+                            <label for="movieRatingInput">Rating:</label>
+                            <select name="movieRatingInput" id="movieRatingInput">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </select>
+                            <!--<label for="movieRatingInput">Rating</label>-->
+                            <!--<input type="number" name="movieRatingInput" id="movieRatingInput">-->
                         </div>
-                    <div class="col-xs-4"><button type="button" id="submitBtn">Submit New Movie</button></div>
+                    <div class="col-xs-4"><button class="btn btn-info" type="button" id="submitBtn">Submit New Movie</button></div>
                     </div>
                     </div>
             </div>
         </div>
+        <div class="row tableHeading">
+            <div class="col-xs-4"><h2>Titles</h2></div>
+            <div class="col-xs-4"><h2>Rating</h2></div>
+            <div class="col-xs-4"><h2>Options</h2></div>
+        </div>
+        <div class="divider"></div>
         <!--Below is where movies will be displayed-->
         <div class="row" id="display-movies">
-            <h1 class="col-xs-12">Loading Movies...</h1>
+            <div class="col-xs-12">
+                <div class="loader"></div>
+            </div>
         </div>
     </div>
 
